- Fixed the message scrolling bug.
- Fixed the broken link to the support server.
- Added SHA-3 internally in favor of the older SHA-2 standard.
- Added the ability to edit encrypted messages.
- Added automatic key exchanges.
- Added the ability to remember encryption modes on a per-channel basis.
- Added the ability to encrypt and decrypt any attached embeds. ( Example: Quoting plugins. )
- Simplified the process of key exchanges.
- Various code optimizations and improvements.

Version 1.5.12

- Fixed a bug regarding Up1 embeds.
- Updated OpenPGP.js library to v4.0.
- Updated the user guide to explain how to use non-global, Nitro-only Emojis.
- Improved the SecureDiscord script to allow for easier configuration and new features.
- Added local state support. Channels will now remember if you have automatic encryption enabled.
- Added the ability to have full-emoji auto-select support if the current channel has automatic encryption enabled.

Version 1.5.11

- Fixed a bug due to URL parsing allowing possibly exploitable messages from crashing the client.
- Removed referrers from being passed to URL links.

Version 1.5.10

- Added the ability to escape inline code blocks with the backslash character. ( "\" )
- Fixed a bug where timed messages were completely broken.
- Fixed a bug where updating the timed message expiration interval wouldn't be saved on reload.
- Fixed a bug where updating the scanning interval wouldn't be saved on a reload.

Version 1.5.9

- Added an option to allow users to configure what decrypted messages should be prefixed with.

Version 1.5.8

- Fixed accidentally breaking signature due to pushing to the wrong branch.
- Prevent public key messages sent from being hidden due to user confusion.
- Allowed inline code blocks to span multiple lines.
- Minor code improvements.

Version 1.5.7

- Added support for mentioning channels in messages. ( They will appear just as tagged users. )