@@ -16,6 +16,7 @@ Version 2.0.0
 - Added automatic key exchanges.
 - Added the ability to remember encryption modes on a per-channel basis.
 - Added the ability to encrypt and decrypt any attached embeds. ( Example: Quoting plugins. )
+- Decreased the minimum database password requirement to 32 characters.
 - Simplified the process of key exchanges.
 - Various code optimizations and improvements.
 
